@@ -2232,6 +2232,9 @@
     - BOOK: poly(methyl_methacrylate)
       name: "(C<sub>5</sub>O<sub>2</sub>H<sub>8</sub>)<sub>n</sub> (Poly(methyl methacrylate), PMMA)"
       content:
+        - PAGE: Beadie
+          name: "Beadie et al. 2015: n 0.42-1.62 µm"
+          path: "organic/(C5O2H8)n - poly(methyl methacrylate)/Beadie.yml"
         - PAGE: Szczurowski
           name: "Szczurowski 2013: n 0.4047-1.083 µm"
           path: "organic/(C5O2H8)n - poly(methyl methacrylate)/Szczurowski.yml"
