@@ -1,0 +1,12 @@
+# this file is submitted for review as part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "G. Beadie, M. Brindza, R. A. Flynn, A. Rosenberg, and J. S. Shirk. Refractive index measurements of poly(methyl methacrylate) (PMMA) from 0.4-1.6 μm, <a href=\"http://dx.doi.org/10.1364/AO.54.00F139\"> <i>Appl. Opt.</i> <b>54</b>, F139-F143 (2015)</a>"
+
+COMMENTS: "20.1 °C. Absolute accuracy < 2×10<sup>-4</sup>."
+DATA:
+  - type: formula 3
+    range: 0.42 1.62
+    coefficients: 2.1778 6.1209e-3 2 -1.5004e-3 4 2.3678e-2 -2 -4.2137e-3 -4 7.3417e-4 -6 -4.5042e-5 -8
+    
