@@ -38,6 +38,8 @@ next release
     organic/C6H12 - cyclohexane/Kerl-293K.yml
     organic/C6H12 - cyclohexane/Kerl-313K.yml
     organic/C6H12 - cyclohexane/Kerl-333K.yml
+  new data (thanks to Guy Beadie, Naval Research Laboratory, Washington DC, USA, for providing data in yaml format!)
+    organic/(C5O2H8)n - poly(methyl methacrylate)/Beadie.yml
   new data
     organic/C2H2 - acetylene/Loria.yml
   improved data
